--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,20 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.38.1",
+    "joi": "^17.13.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
+    "@babel/eslint-parser": "^7.26.5",
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-plugin-eslint": "5.0.8",
+    "@vue/cli-service": "5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^17.11.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.27.0"
   }
